# Chat-TUI

./: Cargo.toml  README.md
chat_lib/: Cargo.toml
chat_lib/src/: args.rs  lib.rs  messages.rs  request.rs  response.rs
client/: Cargo.toml
client/src/: main.rs  tui.rs
doc/: all.html  fn.handle_connection.html  index.html  sidebar-items.js  static.IP_ADDR.html  static.PORT.html
doc/args/: index.html  struct.Args.html
doc/messages/: index.html  sidebar-items.js  struct.Message.html  type.State.html
doc/request/: enum.Method.html  fn.parse_request.html  index.html  sidebar-items.js  struct.Request.html
doc/response/: enum.Status.html  fn.get_response.html  fn.parse_response.html  index.html  sidebar-items.js  struct.Response.html
server/: Cargo.toml
server/src/: main.rs
