[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
structopt = { workspace = true }
chat_lib = { path = "../chat_lib" } 
ratatui = "0.29.0"
tui-input = "0.14.0"
futures = "0.3.31"
