[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
structopt = { workspace = true }
chat_lib = { path = "../chat_lib" } 
